--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
             "email": "office@flowmotion-labs.com"
         }
     ],
+    "require": {
+        "php": "^7",
+        "psr/http-message": "^1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6"
     },
