updated php language level to v7.1 dropped UriBuilder in favor of UriFactory cleaned up Uri and UriNormalizer code style fixes

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "fm-labs/php-uri",
     "description": "Simple URI library for PHP",
-    "license": "See LICENSE file",
+    "license": "MIT",
     "minimum-stability": "stable",
     "authors": [
         {
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7",
+        "php": "^7.1",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
