--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8"
+        "phpunit/phpunit": "^7|^8"
     },
     "autoload": {
         "psr-4": {
@@ -27,7 +27,7 @@
         }
     },
     "scripts": {
-        "test": "./vendor/bin/phpunit --bootstrap tests/bootstrap.php tests/",
-        "test-verbose": "./vendor/bin/phpunit -vv --bootstrap tests/bootstrap.php tests/"
+        "test": "./vendor/bin/phpunit",
+        "test-verbose": "./vendor/bin/phpunit -vv"
     }
 }
