--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7|^8"
+        "phpunit/phpunit": "^7|^8|^9"
     },
     "autoload": {
         "psr-4": {
